# advent-of-code

./: .gitignore  CMakeLists.txt
2015/: build.zig  build.zig.zon  main.zig  setup.zig
2015/day01/: root.zig
2015/day02/: root.zig
2015/day03/: root.zig
2015/day04/: root.zig
2015/day04/test_md5/: build.zig  (+6 more)
2015/day05/: root.zig
2015/day06/: main.py  root.zig
2015/day07/: root.zig
2015/day08/: root.zig
2015/day09/: root.zig
2015/day21/: input.txt  root.zig
2020/day10/: main.cpp
2020/day11/: CMakeLists.txt
2020/day13/: main.cpp
2020/day15/: CMakeLists.txt
2020/day16/: main.cpp
2020/day17/: CMakeLists.txt
2020/day18/: main.cpp
2020/day19/: input4.txt
2020/day2/: main.cpp
2020/day20/: CMakeLists.txt
2020/day21/: main.cpp
2020/day22/: CMakeLists.txt  input.txt
2020/day23/: CMakeLists.txt
2020/day24/: CMakeLists.txt  main.cpp
2020/day3/: main.cpp
2020/day4/: main.cpp
2020/day5/: CMakeLists.txt  main.cpp
2020/day7/: main.cpp
2020/day8/: CMakeLists.txt
2020/day9/: CMakeLists.txt
aoc_common/aoc_input/: input_handler.hpp
day1/: input.txt  main.cpp
day10/: CMakeLists.txt
day11/: main.cpp
day12/: CMakeLists.txt  main.cpp
day13/: CMakeLists.txt
day14/: CMakeLists.txt  main.cpp
day15/: main.cpp
day16/: CMakeLists.txt
day17/: main.cpp
day18/: CMakeLists.txt
day19/: CMakeLists.txt  input3.txt  input6.txt  main.cpp
day20/: main.cpp
day21/: CMakeLists.txt
day22/: main.cpp
day23/: main.cpp
day25/: CMakeLists.txt  main.cpp
day6/: main.cpp
day7/: main.cpp
day8/: main.cpp
day9/: main.cpp
(+1 files in other folders)
